TestReachabilityFenceWithBuffer